# PACE

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  main.py  pyproject.toml
src/pace/config/: constants.py  mcp_config.py  persona.py  worker_prompts.py
src/pace/graph/: enhanced_utils.py  graph.py  nodes.py  singletons.py  state.py  tools.py
src/pace/llm/: llm_wrapper.py  rate_limiting.py
src/pace/memory/: memory_manager.py
src/pace/utils/: message_conversion.py
